WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235404
[:has() pseudo-class] Ignore :visited inside :has()
https://bugs.webkit.org/show_bug.cgi?id=235404
Summary
[:has() pseudo-class] Ignore :visited inside :has()
Antti Koivisto
Reported
2022-01-20 08:22:32 PST
Like with :is() etc.
Attachments
Patch
(6.75 KB, patch)
2022-01-20 08:30 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-01-20 08:30:10 PST
Created
attachment 449578
[details]
Patch
EWS Watchlist
Comment 2
2022-01-20 08:32:16 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Sam Weinig
Comment 3
2022-01-20 09:51:14 PST
Comment on
attachment 449578
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449578&action=review
> LayoutTests/imported/w3c/web-platform-tests/css/selectors/has-visited-ref.html:4 > +<link rel="author" title="Byungwoo Lee" href="
mailto:blee@igalia.com
">
Is this the right author for this?
> LayoutTests/imported/w3c/web-platform-tests/css/selectors/has-visited.html:4 > +<link rel="author" title="Byungwoo Lee" href="
mailto:blee@igalia.com
">
Same question.
Antti Koivisto
Comment 4
2022-01-20 09:52:03 PST
> Is this the right author for this?
Yeah, this is an import.
EWS
Comment 5
2022-01-20 10:15:56 PST
Committed
r288304
(
246222@main
): <
https://commits.webkit.org/246222@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449578
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-01-20 10:16:36 PST
<
rdar://problem/87836459
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug